# bakesite

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  claude.md  index.md  pyproject.toml
.github/workflows/: linting.yml  publish.yml
src/bakesite/: __init__.py  boilerplate.py  compile.py  parameters.py  server.py  watcher.py
src/bakesite/boilerplate/content/: home.md
src/bakesite/boilerplate/content/blog/: 2025-01-31-Getting-Started.md  2025-02-14-Happy-Valentines-Day.md
src/bakesite/layouts/basic/static/css/: style.css
src/bakesite/layouts/basic/templates/: page.html  post.html  tag_list.html
src/bakesite/template/content/blog/: 2025-01-31-Getting-Started.md
src/tests/: conftest.py  test_bake.py  test_boilerplate.py  test_content.py  test_headers.py  test_list.py  test_pages.py  test_parameters.py  test_render.py  test_tags.py
