[project]
name = "bakesite"
version = "0.4.0"
description = "The Simplest Static Site Generator"
readme = "README.md"
authors = [
    { name = "Andrew Graham-Yooll", email = "andrewgy8@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "markdown-it-py[plugins]",
]

[project.scripts]
bakesite = "bakesite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "isort>=6.0.0",
    "black>=25.1.0",
    "flake8>=7.1.1",
]

[tool.pytest.ini_options]
addopts = ["--cov=bakesite", "--cov-report=term", "--cov-fail-under=81"]
